crates/toml/tests/snapshots/invalid/control/bare-vertical-tab.stderr
TOML parse error at line 1, column 21
  |
1 | bare-vertical-tab = 
  |                     ^
string values must be quoted, expected literal string
